- initial support for pdf 1.5+ files that use object and xref streams
- support streams that use a flate filter with the predictor option
- ensure all content instructions are parsed when split over multiple stream
  - thanks to Jack Rusher for reporting
- Fix a string parsing bug that was causing some character conversions to utf-8
  to fail
  - thanks to Andrea Barisani for reporting the issue

v0.8.5 (11th April 2010)
- fix a regression introduced in 0.8.4.
  - Parameters passed to resource_font callback were inadvertently changed

v0.8.4 (30th March 2010)
- fix parsing of files that use Form XObjects
  - thanks to Andrea Barisani for reporting the issue
- fix two issues that caused a small number of characters to convert to Unicode
  incorrectly
  - thanks to Andrea Barisani for reporting the issue
- require 'pdf-reader' now works a well as 'pdf/reader'
  - good practice to have the require file match the gem name
  - thanks to Chris O'Meara for highlighting this

v0.8.3 (14th February 2010)
- Fix a bug in tokenising of hex strings inside dictionaries
  - Thanks to Brad Ediger for detecting the issue and proposing a solution

v0.8.2 (1st January 2010)
- Fix parsing of files that use Form XObjects behind an indirect reference
  (thanks Cornelius Illi and Patrick Crosby)
- Rewrote Buffer class to fix various speed issues reported over the years
  - On my sample file extracting full text reduced from 220 seconds to 9 seconds.

v0.8.1 (27th November 2009)
- Added PDF::Hash#version. Provides access to the source file PDF version

v0.8.0 (20th November 2009)
- Added PDF::Hash. It provides direct access to objects from a PDF file
  with an API that emulates the standard Ruby hash

v0.7.7 (11th September 2009)
- Trigger callbacks contained in Form XObjects when we encounter them in a
  content stream
- Fix inheritance of page resources to comply with section 3.6.2

v0.7.6 (28th August 2009)
- Various bug fixes that increase the files we can successfully parse