@@ -6,6 +6,8 @@ v0.8.6 (XXX)
 - Fix a string parsing bug that was causing some character conversions to utf-8
   to fail
   - thanks to Andrea Barisani for reporting the issue
+- Fix a bug that prevented PDFs with white space after the EOF marker from loading
+  - thanks to Solomon White for reporting the issue
 
 v0.8.5 (11th April 2010)
 - fix a regression introduced in 0.8.4.
